# uftpd

./: INSTALL.md  configure.ac  meson.build  mesonconfig.h.in
src/: meson.build
